CB-26921 add additional properties for DLM metering.